components/bamoe/services/management-console/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: management-console-nginx
  name: management-console-nginx
  namespace: app-bamoe-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: management-console-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: management-console-nginx
        middleware: bamoe
    spec:
      containers:
        - image: quay.io/ldesrosi/bamoe-nginx:latest
          name: bamoe-management-console-nginx
          ports:
            - containerPort: 8443
              protocol: TCP
          volumeMounts:
              - name: certs-vol
                mountPath: /etc/ssl
                readOnly: true
      restartPolicy: Always
      volumes:
            - name: certs-vol
              secret:
                secretName: nginx-tls-secret
