components/bamoe/services/management-console/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: management-console-nginx
  name: management-console-nginx
  namespace: app-bamoe-services
spec:
  ports:
    - name: "https"
      port: 8443
      targetPort: 8443
  selector:
    app: management-console-nginx
