components/bamoe/services/management-console/nginx/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: management-console-nginx-route
  namespace: app-bamoe-services
  labels:
    app.kubernetes.io/instance: management-console-nginx
spec:
  to:
    kind: Service
    name: management-console-nginx
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
